# odoo-gen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
odoo_gen/: app.py  cli.py  enums.py  errors.py
odoo_gen/controllers/: __init__.py  base.py  chain.py  interactive.py  verbose.py
odoo_gen/core/: context.py  manifest.py  menu_tree.py  resolver.py  signals.py  types.py
odoo_gen/generators/: __init__.py  access.py  base.py  menu.py  model.py  scaffolding.py  view.py
odoo_gen/plan/: executor.py  steps.py  strategies.py
odoo_gen/templates/: __manifest__.py.j2  action.xml.j2  model.py.j2  view.xml.j2
