[project]
name = "odoo-gen"
version = "0.1.0"
description = "Odoo code generator"
requires-python = ">=3.11"
dependencies = ["click", "jinja2", "questionary", "lxml"]

[project.scripts]
odoo-gen = "odoo_gen.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
odoo_gen = ["templates/**/*"]
